--- a/.github/workflows/node.js-deploy.yaml
+++ b/.github/workflows/node.js-deploy.yaml
@@ -1,16 +1,12 @@
 name: Deploy Node.js App to AWS
 
 on:
-  # push:
-  #   branches:
-  #     - main
   workflow_dispatch:
 
 env:
   AWS_REGION: us-east-1
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  ECR_REPO: ${{ env.ECR_REPO }}
 
 jobs:
 
@@ -20,6 +16,9 @@ jobs:
     defaults:
       run:
         working-directory: ./terraform
+
+    outputs:
+      ecr_repo_url: ${{ steps.tf-output.outputs.ecr_repo_url }}
 
     steps:
       - name: Checkout Code
@@ -40,34 +39,34 @@ jobs:
 
       - name: Terraform Apply
         run: terraform apply -auto-approve
-     
+
       - name: Terraform Output
         id: tf-output
         run: |
-          echo "ECR_REPO=$(terraform output -raw ecr_repo_url)" >> $GITHUB_ENV
-
+          echo "ecr_repo_url=$(terraform output -raw ecr_repo_url)" >> $GITHUB_OUTPUT
 
   docker-build:
     name: Docker - Build and Push to ECR
     runs-on: ubuntu-latest
     needs: terraform-provision
     env:
-      ECR_REPO: ${{ env.ECR_REPO }}
       AWS_REGION: ${{ env.AWS_REGION }}
+      ECR_REPO: ${{ needs.terraform-provision.outputs.ecr_repo_url }}
+
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v3
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-    - name: Login to Amazon ECR
-      run: |
-        aws ecr get-login-password --region $AWS_REGION | \
-        docker login --username AWS --password-stdin $ECR_REPO
+      - name: Login to Amazon ECR
+        run: |
+          aws ecr get-login-password --region $AWS_REGION | \
+          docker login --username AWS --password-stdin $ECR_REPO
 
-    - name: Build Docker Image
-      run: |
-        docker build -t $ECR_REPO:latest -t $ECR_REPO:${{ github.sha }} ./app
+      - name: Build Docker Image
+        run: |
+          docker build -t $ECR_REPO:latest -t $ECR_REPO:${{ github.sha }} ./app
 
-    - name: Push Docker Image to ECR
-      run: |
-        docker push $ECR_REPO:latest
-        docker push $ECR_REPO:${{ github.sha }}
+      - name: Push Docker Image to ECR
+        run: |
+          docker push $ECR_REPO:latest
+          docker push $ECR_REPO:${{ github.sha }}
