--- a/.github/workflows/node.js-deploy.yaml
+++ b/.github/workflows/node.js-deploy.yaml
@@ -44,6 +44,9 @@ jobs:
       - name: Terraform Init
         run: terraform init
 
+      - name: Terraform Plan
+        run: terraform plan
+        
       - name: Terraform Validate
         run: terraform validate
 
