--- a/.github/workflows/node.js-deploy.yaml
+++ b/.github/workflows/node.js-deploy.yaml
@@ -57,6 +57,7 @@ jobs:
         id: tf-output
         run: |
           echo "ecr_repo_url=$(terraform output -raw ecr_repo_url)" >> $GITHUB_OUTPUT
+          echo "ECR Repo URL: $(terraform output -raw ecr_repo_url)"
 
   docker-build:
     name: Docker - Build and Push to ECR
@@ -64,9 +65,6 @@ jobs:
     needs: terraform-provision
     env:
       ECR_REPO: ${{ needs.terraform-provision.outputs.ecr_repo_url }}
-    defaults:
-      run:
-        working-directory: ./app
         
     steps:
       - name: Checkout Code
