--- a/.github/workflows/node.js-deploy.yaml
+++ b/.github/workflows/node.js-deploy.yaml
@@ -59,16 +59,16 @@ jobs:
           echo "ecr_repo_url=$(terraform output -raw ecr_repo_url)" >> $GITHUB_OUTPUT
           echo "ECR Repo URL: $(terraform output -raw ecr_repo_url)"
 
-  docker-build:
-    name: Docker - Build and Push to ECR
-    runs-on: ubuntu-latest
-    needs: terraform-provision
-    env:
-      ECR_REPO: ${{ needs.terraform-provision.outputs.ecr_repo_url }}
+  # docker-build:
+  #   name: Docker - Build and Push to ECR
+  #   runs-on: ubuntu-latest
+  #   needs: terraform-provision
+  #   env:
+  #     ECR_REPO: ${{ needs.terraform-provision.outputs.ecr_repo_url }}
         
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+  #   steps:
+      # - name: Checkout Code
+      #   uses: actions/checkout@v3
 
       - name: Login to Amazon ECR
         run: |
