--- a/.github/workflows/node.js-deploy.yaml
+++ b/.github/workflows/node.js-deploy.yaml
@@ -56,7 +56,7 @@ jobs:
       - name: Terraform Output
         id: tf-output
         run: |
-          echo "ecr_repo_url=$(terraform output -raw ecr_repo_url)" >> $GITHUB_OUTPUT
+          echo "ecr_repo_url=$(terraform output -raw ecr_repo_url)" >> $GITHUB_ENV
           echo "ECR Repo URL: $(terraform output -raw ecr_repo_url)"
 
   # docker-build:
@@ -71,6 +71,9 @@ jobs:
       #   uses: actions/checkout@v3
 
       - name: Login to Amazon ECR
+        env:
+          AWS_REGION: ${{ env.AWS_REGION }}
+          ECR_REPO: ${{ env.ecr_repo_url }}
         run: |
           aws ecr get-login-password --region $AWS_REGION | \
           docker login --username AWS --password-stdin $ECR_REPO
