--- a/.github/workflows/node.js-deploy.yaml
+++ b/.github/workflows/node.js-deploy.yaml
@@ -80,18 +80,18 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t $ECR_REPO:latest -t $ECR_REPO:${{ github.sha }} ./app
+          docker build -t ${{ env.ecr_repo_url }}:latest -t ${{ env.ecr_repo_url }}:${{ github.sha }} ./app
 
       - name: Push Docker Image to ECR
         run: |
-          docker push $ECR_REPO:latest
-          docker push $ECR_REPO:${{ github.sha }}
+          docker push ${{ env.ecr_repo_url }}:latest
+          docker push ${{ env.ecr_repo_url }}:${{ github.sha }}
 
       - name: Store image tag in SSM Parameter Store
         run: |
           aws ssm put-parameter \
             --name "/app/docker/image" \
-            --value "${{ env.ECR_REPO }}:latest" \
+            --value "${{ env.ecr_repo_url }}:latest" \
             --type String \
             --overwrite \
             --region $AWS_REGION
